@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-02T01:15:14Z",
+  "timestamp" : "2022-04-02T08:19:47Z",
   "count_outdated" : 50,
   "uniques_outdated" : 40,
-  "count" : 96,
-  "uniques" : 66,
+  "count" : 106,
+  "uniques" : 72,
   "clones" : [
     {
       "timestamp": "2022-03-23T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 2, 13 ],
       "uniques": 9,
       "uniques_minmax": [ 1, 9 ]
+    },
+    {
+      "timestamp": "2022-04-02T00:00:00Z",
+      "count": 10,
+      "count_minmax": [ 0, 10 ],
+      "uniques": 6,
+      "uniques_minmax": [ 0, 6 ]
     }
   ]
 }
