@@ -1,6 +1,6 @@
 {
-  "count": 46,
-  "uniques": 18,
+  "count": 56,
+  "uniques": 21,
   "clones": [
     {
       "timestamp": "2022-03-23T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2022-04-01T00:00:00Z",
       "count": 13,
       "uniques": 9
+    },
+    {
+      "timestamp": "2022-04-02T00:00:00Z",
+      "count": 10,
+      "uniques": 6
     }
   ]
 }
